--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <canvas id="coral-game"></canvas>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Aquatic Adventures</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+
+  <body>
+    <button class="start-btn">SWIM</button>
+
+    <canvas id="canvas" width="1000" height="600"></canvas>
+
+    <script src="/fish.js"></script>
+    <script src="/background.js"></script>
+    <script src="/game.js"></script>
+    <script src="/script.js"></script>
+  </body>
 </html>
