--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <canvas id="canvas" width="1000" height="600"></canvas>
 
-    <script src="/fish.js"></script>
+    <script src="/constants.js"></script>
     <script src="/background.js"></script>
+    <script src="/fish.js"></script>
     <script src="/game.js"></script>
     <script src="/script.js"></script>
   </body>
