--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="/background.js"></script>
     <script src="/fish.js"></script>
     <script src="/game.js"></script>
+    <script src="/starfish.js"></script>
     <script src="/jellyfish.js"></script>
     <script src="/script.js"></script>
   </body>
