--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
       <canvas id="canvas" width="1000" height="600"></canvas>
       <button class="start-btn">SWIM</button>
     </div>
+    <div id="life-bar"></div>
 
-    <script src="/constants.js"></script>
-    <script src="/background.js"></script>
-    <script src="/fish.js"></script>
-    <script src="/game.js"></script>
-    <script src="/starfish.js"></script>
-    <script src="/jellyfish.js"></script>
-    <script src="/script.js"></script>
+    <script src="./constants.js"></script>
+    <script src="./background.js"></script>
+    <script src="./fish.js"></script>
+    <script src="./game.js"></script>
+    <script src="./starfish.js"></script>
+    <script src="./jellyfish.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
