--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <button class="start-btn">SWIM</button>
     </div>
     <div id="life-bar"></div>
+    <div>Score:
+      <span id="score">0</span>
+    </div>
 
     <script src="./constants.js"></script>
     <script src="./background.js"></script>
